# push-to-talk-dictate

./: .env.example  .gitignore  LICENSE  LICENSES.md  Readme.md  ptt_dictate.py  pyproject.toml  requirements.txt
dictate/: __init__.py  __main__.py  app.py  audio.py  config.py  output.py  server.py  transcribe.py  types.py
tests/: __init__.py  conftest.py  test_config.py  test_server.py  test_transcribe.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.css  App.tsx  types.ts
web/src/components/: AudioVisualizer.css  AudioVisualizer.tsx  ErrorMessage.css  ErrorMessage.tsx  LanguageSelector.css  LanguageSelector.tsx  RecordButton.css  RecordButton.tsx  StatusIndicator.css  StatusIndicator.tsx  TranscriptionOutput.css  TranscriptionOutput.tsx  index.ts
web/src/hooks/: useAudioRecorder.ts  useWebSocket.ts
