[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dictate"
version = "1.0.0"
description = "Push-to-Talk Voice Dictation for macOS using Apple Silicon MLX"
readme = "Readme.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Piotr Rasala"}
]
keywords = ["dictation", "speech-to-text", "whisper", "mlx", "macos", "voice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "mlx>=0.5.0",
    "mlx-whisper>=0.1.0",
    "mlx-lm>=0.5.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
dictate = "dictate.__main__:main"

[project.urls]
Homepage = "https://github.com/piotr-rasala/dictate"
Repository = "https://github.com/piotr-rasala/dictate"

[tool.setuptools.packages.find]
include = ["dictate*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
